# git2prompt

./: .git2promptconfig  .git2promptignore  .gitignore  Cargo.toml  README.md
src/: config.rs  file_utils.rs  git_utils.rs  io_utils.rs  lib.rs  main.rs  processing.rs  repository.rs
tests/: integration_tests.rs
