[package]
name = "git2prompt"
version = "0.2.0"
authors = ["Fabio Thomaz Molinar <fabiomolinar@gmail.com>"]
description = "git2prompt is a command-line tool that takes a GitHub repository URL, downloads its contents, and generates a single text file optimized for use as input to AI tools."
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/fabiomolinar/git2prompt"
categories = [
    "command-line-interface", 
    "parsing",
    "text-processing"
]
keywords = [
    "command-line",
    "parser",
    "crawler",
    "AI",
    "git2prompt"
]
edition = "2024"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
git2 = "0.20.2"
tokio = { version = "1.47.1", features = ["full"] }
walkdir = "2.3"
futures = "0.3"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
